--- a/BluetoothClock/Main.storyboard
+++ b/BluetoothClock/Main.storyboard
@@ -23,10 +23,10 @@
             </objects>
             <point key="canvasLocation" x="1109" y="1186"/>
         </scene>
-        <!--First View Controller - First-->
+        <!--First View Controller-->
         <scene sceneID="W3I-pn-N6e">
             <objects>
-                <viewController title="First" id="CZ4-MO-1fc" customClass="FirstViewController" sceneMemberID="viewController">
+                <viewController id="CZ4-MO-1fc" customClass="FirstViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="v4c-Pw-zLd">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -119,20 +119,24 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xpk-1z-fST">
-                                <rect key="frame" x="79" y="382" width="163" height="21"/>
+                                <rect key="frame" x="20" y="458" width="163" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T2R-oR-ITm">
-                                <rect key="frame" x="79" y="411" width="163" height="21"/>
+                                <rect key="frame" x="20" y="487" width="163" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Background.png" translatesAutoresizingMaskIntoConstraints="NO" id="xhq-DI-Zd6">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Signal-01.png" translatesAutoresizingMaskIntoConstraints="NO" id="20L-fX-mj0">
+                                <rect key="frame" x="5" y="129" width="310" height="310"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                         </subviews>
@@ -142,6 +146,7 @@
                     <connections>
                         <outlet property="connectLabel" destination="xpk-1z-fST" id="tR9-zs-nMu"/>
                         <outlet property="distantLabel" destination="T2R-oR-ITm" id="u69-Ya-SUd"/>
+                        <outlet property="imageView" destination="20L-fX-mj0" id="hpy-Fg-Rxp"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3qq-4t-Ow8" sceneMemberID="firstResponder"/>
@@ -153,10 +158,9 @@
             <objects>
                 <tabBarController id="8YX-ce-x5E" customClass="TabBarViewController" sceneMemberID="viewController">
                     <nil key="simulatedBottomBarMetrics"/>
-                    <tabBar key="tabBar" contentMode="scaleToFill" id="JQR-rB-NYL">
+                    <tabBar key="tabBar" contentMode="scaleToFill" backgroundImage="Tab Bar Background.png" id="JQR-rB-NYL">
                         <rect key="frame" x="0.0" y="431" width="320" height="49"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
                         <segue destination="EzF-au-Lob" kind="relationship" relationship="viewControllers" id="SUk-Ux-ee1"/>
@@ -168,11 +172,11 @@
             </objects>
             <point key="canvasLocation" x="92" y="149"/>
         </scene>
-        <!--Navigation Controller - First-->
+        <!--Navigation Controller - Alarm-->
         <scene sceneID="Y2x-zs-HhG">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="EzF-au-Lob" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="First" image="first" id="u1e-5L-l1D"/>
+                    <tabBarItem key="tabBarItem" title="Alarm" image="Tab Bar Icon-01.png" id="u1e-5L-l1D"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="OQu-ux-G7w">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
@@ -191,11 +195,11 @@
             </objects>
             <point key="canvasLocation" x="653" y="-138"/>
         </scene>
-        <!--Navigation Controller - Second-->
+        <!--Navigation Controller - Signal-->
         <scene sceneID="J38-sr-Xkb">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ame-y6-efo" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Second" image="second" id="Z7h-1E-pvt"/>
+                    <tabBarItem key="tabBarItem" title="Signal" image="Tab Bar Icon-03.png" id="Z7h-1E-pvt"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="xVW-Is-KeC">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
@@ -210,11 +214,11 @@
             </objects>
             <point key="canvasLocation" x="653" y="524"/>
         </scene>
-        <!--Navigation Controller - Item-->
+        <!--Navigation Controller - About-->
         <scene sceneID="kTf-F3-WSB">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ZhB-a6-6Tn" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="ibg-j5-nRr"/>
+                    <tabBarItem key="tabBarItem" title="About" image="Tab Bar Icon-05.png" id="ibg-j5-nRr"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="nCH-Zy-nA4">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
@@ -249,9 +253,12 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Background.png" width="2667" height="4735"/>
-        <image name="first" width="30" height="30"/>
-        <image name="second" width="30" height="30"/>
+        <image name="Background.png" width="320" height="568"/>
+        <image name="Signal-01.png" width="320" height="320"/>
+        <image name="Tab Bar Background.png" width="1333" height="204"/>
+        <image name="Tab Bar Icon-01.png" width="30" height="30"/>
+        <image name="Tab Bar Icon-03.png" width="30" height="30"/>
+        <image name="Tab Bar Icon-05.png" width="30" height="30"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
