--- a/SmartClock/Main.storyboard
+++ b/SmartClock/Main.storyboard
@@ -275,6 +275,9 @@
                                                 <switch opaque="NO" tag="1004" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6gT-4x-UPH">
                                                     <rect key="frame" x="251" y="39" width="51" height="31"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <connections>
+                                                        <action selector="switchValueChange:" destination="vP3-kw-WwG" eventType="valueChanged" id="gKg-jg-poA"/>
+                                                    </connections>
                                                 </switch>
                                             </subviews>
                                         </tableViewCellContentView>
